--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
     <link rel="stylesheet" href="/css/styles.css">
 </head>
+
 <body>
-    
+    <h1>Headding 1</h1>
+    <h2>Headding 2</h2>
+    <h3>Headding 3</h3>
+
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Necessitatibus laudantium, adipisci amet vitae
+        praesentium labore quasi ipsum consequuntur ipsam nesciunt.</p>
 </body>
+
 </html>
