--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" href="/css/styles.css">
 </head>
 
-<body>
 
+<body style="padding: 5rem;">
+
+   
 </body>
 
 </html>
