--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 
@@ -36,7 +37,7 @@
     <section class="block block--dark block--skewed-left hero">
         <div class="container grid grid--1x2">
             <header class="block__header hero__content">
-                <h1 class="block__heading">Cloud Hosting
+                <h1 class="block__heading" data-aos="fade-right">Cloud Hosting
                     for Pros</h1>
                 <p class="hero__tagline">
                     Deploy your website in less than 60 seconds.
@@ -45,7 +46,7 @@
 
             </header>
 
-            <picture>
+            <picture data-aos="fade-left">
                 <source type="image/webp" srcset="images/banner@1x.webp 1x, images/banner@2x.webp 2x ">
                 <source type="image/png" srcset="images/banner@1x.png 1x, images/banner@2x.png 2x ">
                 <img class="hero__image" src="/images/banner@1x.png" alt="">
@@ -53,7 +54,7 @@
         </div>
     </section>
 
-    <section class="block container block__domain">
+    <section class="block container block__domain" data-aos="fade-up">
         <header class="block__header">
             <h2>Starting at $9 per month</h2>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
@@ -78,7 +79,7 @@
 
     </section>
 
-    <section class="block container block-plans">
+    <section class="block container block-plans" data-aos="fade-up">
 
         <div class="grid grid--1x3">
             <div class="plan">
@@ -158,7 +159,7 @@
             <h2>Host Оn Тhe Cloud to Keep Growing</h2>
             <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan.</p>
         </header>
-        <article class="grid grid--1x2 feature">
+        <article class="grid grid--1x2 feature" data-aos="fade-right">
             <div class="feature__content">
                 <span class="icon-container">
                     <svg class="icon icon--praimary">
@@ -177,7 +178,7 @@
                 <a href="" class="link-arrow">Learn More</a>
             </div>
 
-            <picture>
+            <picture data-aos="zoom-in-left">
                 <source type="image/webp" srcset="/images/easy.webp 1x, /images/easy@2x.webp 2x">
                 <source type="image/jpg" srcset="/images/easy.jpg 1x, /images/easy@2x.jpg 2x">
                 <img class="feature__inage" src="/images/easy@2x.jpg" alt="">
@@ -187,7 +188,7 @@
         <article class="grid grid--1x2 feature">
 
 
-            <div class="feature__content">
+            <div class="feature__content" data-aos="fade-left">
                 <span class="icon-container">
                     <svg class="icon icon--praimary">
                         <use xlink:href="images/sprite.svg#computer"></use>
@@ -205,7 +206,7 @@
                 <a href="" class="link-arrow">Learn More</a>
             </div>
 
-            <picture>
+            <picture data-aos="zoom-in-right">
                 <source type="image/webp" srcset="/images/fast.webp 1x, /images/fast@2x.webp 2x">
                 <source type="image/jpg" srcset="/images/fast.jpg 1x, /images/fast@2x.jpg 2x">
                 <img class="feature__inage" src="/images/fast@2x.jpg" alt="">
@@ -215,7 +216,7 @@
         </article>
 
         <article class="grid grid--1x2 feature">
-            <div class="feature__content">
+            <div class="feature__content" data-aos="fade-right">
                 <span class="icon-container">
                     <svg class="icon icon--praimary">
                         <use xlink:href="images/sprite.svg#wordpress"></use>
@@ -233,7 +234,7 @@
                 <a href="" class="link-arrow">Learn More</a>
             </div>
 
-            <picture>
+            <picture data-aos="zoom-in-left">
                 <source type="image/webp" srcset="/images/wordpress.webp 1x, /images/wordpress@2x.webp 2x">
                 <source type="image/jpg" srcset="/images/wordpress.jpg 1x, /images/wordpress@2x.jpg 2x">
                 <img class="feature__inage" src="/images/wordpress@2x.jpg" alt="">
@@ -244,7 +245,7 @@
         <article class="grid grid--1x2 feature">
 
 
-            <div class="feature__content">
+            <div class="feature__content" data-aos="fade-left">
                 <span class="icon-container">
                     <svg class="icon icon--praimary">
                         <use xlink:href="images/sprite.svg#clock"></use>
@@ -262,7 +263,7 @@
                 <a href="" class="link-arrow">Learn More</a>
             </div>
 
-            <picture>
+            <picture data-aos="zoom-in-right">
                 <source type="image/webp" srcset="/images/support.webp 1x, /images/support@2x.webp 2x">
                 <source type="image/jpg" srcset="/images/support.jpg 1x, /images/support@2x.jpg 2x">
                 <img class="feature__inage" src="/images/support@2x.jpg" alt="">
@@ -280,13 +281,13 @@
 
         <article class="grid grid--1x2">
 
-            <picture>
+            <picture data-aos="fade-right">
                 <source type="image/webp" srcset="/images/ipad.webp 1x, /images/ipad@2x.webp 2x">
                 <source type="image/jpg" srcset="/images/ipad.jpg 1x, /images/ipad@2x.jpg 2x">
                 <img class="showcase__image" src="/images/ipad.png" alt="">
             </picture>
 
-            <div class="showcase__content">
+            <div class="showcase__content" data-aos="fade-left">
                 <div class="media">
                     <div class="media__icon">
                         <svg class="icon icon--praimary">
@@ -342,7 +343,7 @@
         </article>
     </section>
 
-    <section class="block testimonial_block">
+    <section class="block testimonial_block" data-aos="fade-up">
 
         <header class="block__header ">
             <h2>What our Customer
@@ -400,7 +401,7 @@
 
     <footer class="block block--dark footer__block">
 
-        <section class="callout_block">
+        <section class="callout_block" data-aos="zoom-in">
 
             <div class="callout callout--primary">
                 <div class="grid grid--1x2">
@@ -416,7 +417,7 @@
             </div>
         </section>
 
-        <div class="continer grid footer_sections">
+        <div class="continer grid footer_sections" data-aos="fade-up" data-aos-easing="linear">
 
             <section class="collapsible  footer_section">
                 <header class="collapsible__header">
@@ -499,6 +500,10 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 
