--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Deploy your websites in less than 60 seconds.">
-    <meta propety="og:title" content="Moshify...">
-    <meta propety="og:description" content="Moshify...">
-    <meta propety="og:type" content="website">
-    <meta propety="og:image" content="http....">
-    <meta propety="og:url" content="https://moshified.com">
+    <meta property="og:title" content="Moshify...">
+    <meta property="og:description" content="Moshify...">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="http....">
+    <meta property="og:url" content="https://moshified.com">
     <title>Moshify - Go Online for Just 9$</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -66,7 +66,7 @@
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
         </header>
         <div class="input-group">
-            <input class="input" type="text" name="" id="" placeholder="Enter domain name here ...">
+            <input class="input" type="text" name="Search" placeholder="Enter domain name here ...">
             <button class="btn btn--accent btn--small">
                 <svg class="icon icon--white">
                     <use xlink:href="images/sprite.svg#search"></use>
@@ -387,7 +387,7 @@
                             </div>
                             <div class="media__body">
                                 <span class="quote__title quote__author">Jhone Lumeo</span>
-                                <p class="quote__company">Mosh Company ceo</span>
+                                <span class="quote__company">Mosh Company ceo</span>
 
                             </div>
                         </div>
@@ -426,10 +426,10 @@
         <div class="continer grid footer_sections" data-aos="fade-up" data-aos-easing="linear">
 
             <section class="collapsible  footer_section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">PRODUCTS</h2>
                     <img class="icon collapsible__chevron" src="/images/chevron.svg" alt="">
-                </header>
+                </div>
                 <div class="collapsible__content footer__content">
                     <ul class="list">
                         <li class="list__item">WordPress Hosting
@@ -447,10 +447,10 @@
 
 
             <section class="collapsible  footer_section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">COMPANY</h2>
                     <img class="icon collapsible__chevron" src="/images/chevron.svg" alt="">
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li class="list__item">About</li>
@@ -465,10 +465,10 @@
             </section>
 
             <section class="collapsible  footer_section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">SUPPORT</h2>
                     <img class="icon collapsible__chevron" src="/images/chevron.svg" alt="">
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li class="list__item">Contact</li>
@@ -483,10 +483,10 @@
 
 
             <section class="collapsible  footer_section">
-                <header class="collapsible__header">
+                <div class="collapsible__header">
                     <h2 class="collapsible__heading footer__heading">DOMAINS</h2>
                     <img class="icon collapsible__chevron" src="/images/chevron.svg" alt="">
-                </header>
+                </div>
                 <div class="collapsible__content">
                     <ul class="list">
                         <li class="list__item">Domain Checker</li>
@@ -497,10 +497,10 @@
                     </ul>
                 </div>
             </section>
-            <section class="footer__brand">
+            <div class="footer__brand">
                 <img src="/images/logo.svg" alt="">
                 <p class="footer__copyright">Copyright &copy; 2022 Asmaa</p>
-            </section>
+            </div>
         </div>
 
     </footer>
