--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Deploy your websites in less than 60 seconds.">
-    <meta property="og:title" content="Moshify...">
+    <!-- <meta property="og:title" content="Moshify...">
     <meta property="og:description" content="Moshify...">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http....">
+    <meta property="og:image" content="http...."> -->
     <meta property="og:url" content="https://moshified.com">
     <title>Moshify - Go Online for Just 9$</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -289,7 +289,7 @@
 
             <picture data-aos="fade-right">
                 <source type="image/webp" srcset="/images/ipad.webp 1x, /images/ipad@2x.webp 2x">
-                <source type="image/jpg" srcset="/images/ipad.jpg 1x, /images/ipad@2x.jpg 2x">
+                <source type="image/png" srcset="/images/ipad.png 1x, /images/ipad@2x.png 2x">
                 <img class="showcase__image" src="/images/ipad.png" alt="">
             </picture>
 
