--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="node_modules/normalize.css/normalize.css">
+    <!-- <link rel="stylesheet" href="node_modules/normalize.css/normalize.css"> -->
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
@@ -26,7 +26,7 @@
 
     <header>
         <nav class="nav collapsible">
-            <a class="nav__brand" href="/"><img src="/images/logo.svg" alt=""></a>
+            <a aria-label="Moshified" class="nav__brand" href="/"><img src="/images/logo.svg" alt=""></a>
             <svg class="icon icon--white nav__toggler">
                 <use xlink:href="images/sprite.svg#menu"></use>
             </svg>
@@ -48,7 +48,7 @@
                 <p class="hero__tagline">
                     Deploy your website in less than 60 seconds.
                 </p>
-                <a class="btn btn--accent"> Get Started </a>
+                <a href="/" class="btn btn--accent"> Get Started </a>
 
             </header>
 
@@ -181,13 +181,13 @@
                     aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
                     facilisis.</p>
 
-                <a href="" class="link-arrow">Learn More</a>
+                <a href="/" class="link-arrow">Learn More</a>
             </div>
 
             <picture data-aos="zoom-in-left">
                 <source type="image/webp" srcset="/images/easy.webp 1x, /images/easy@2x.webp 2x">
                 <source type="image/jpg" srcset="/images/easy.jpg 1x, /images/easy@2x.jpg 2x">
-                <img class="feature__inage" src="/images/easy@2x.jpg" alt="">
+                <img class="feature__image" src="/images/easy@2x.jpg" alt="">
             </picture>
         </article>
 
@@ -209,13 +209,13 @@
                     aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
                     facilisis.</p>
 
-                <a href="" class="link-arrow">Learn More</a>
+                <a href="/" class="link-arrow">Learn More</a>
             </div>
 
             <picture data-aos="zoom-in-right">
                 <source type="image/webp" srcset="/images/fast.webp 1x, /images/fast@2x.webp 2x">
                 <source type="image/jpg" srcset="/images/fast.jpg 1x, /images/fast@2x.jpg 2x">
-                <img class="feature__inage" src="/images/fast@2x.jpg" alt="">
+                <img class="feature__image" src="/images/fast@2x.jpg" alt="">
             </picture>
 
 
@@ -237,13 +237,13 @@
                     aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
                     facilisis.</p>
 
-                <a href="" class="link-arrow">Learn More</a>
+                <a href="/" class="link-arrow">Learn More</a>
             </div>
 
             <picture data-aos="zoom-in-left">
                 <source type="image/webp" srcset="/images/wordpress.webp 1x, /images/wordpress@2x.webp 2x">
                 <source type="image/jpg" srcset="/images/wordpress.jpg 1x, /images/wordpress@2x.jpg 2x">
-                <img class="feature__inage" src="/images/wordpress@2x.jpg" alt="">
+                <img class="feature__image" src="/images/wordpress@2x.jpg" alt="">
             </picture>
 
         </article>
@@ -266,13 +266,13 @@
                     aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel
                     facilisis.</p>
 
-                <a href="" class="link-arrow">Learn More</a>
+                <a href="/" class="link-arrow">Learn More</a>
             </div>
 
             <picture data-aos="zoom-in-right">
                 <source type="image/webp" srcset="/images/support.webp 1x, /images/support@2x.webp 2x">
                 <source type="image/jpg" srcset="/images/support.jpg 1x, /images/support@2x.jpg 2x">
-                <img class="feature__inage" src="/images/support@2x.jpg" alt="">
+                <img class="feature__image" src="/images/support@2x.jpg" alt="">
             </picture>
 
         </article>
@@ -418,7 +418,7 @@
                             with our 14-day money
                             back guarantee.</p>
                     </div>
-                    <a href="" class="btn btn--secondary">Get started</a>
+                    <a href="/" class="btn btn--secondary">Get started</a>
                 </div>
             </div>
         </section>
