--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
     <section class="block block--dark block--skewed-left hero">
         <div class="container grid grid--1x2">
             <header class="block__header hero__content">
-                <h1 class="block__heading" data-aos="fade-right">Cloud Hosting
-                    for Pros</h1>
+                <h1 class="block__heading" data-aos="fade-right">Cloud Hosting for Pros</h1>
                 <p class="hero__tagline">
                     Deploy your website in less than 60 seconds.
                 </p>
