--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 
             </header>
 
-            <picture data-aos="fade-left">
+            <picture>
                 <source type="image/webp" srcset="images/banner@1x.webp 1x, images/banner@2x.webp 2x ">
                 <source type="image/png" srcset="images/banner@1x.png 1x, images/banner@2x.png 2x ">
-                <img class="hero__image" src="/images/banner@1x.png" alt="">
+                <img class="hero__image" src="/images/banner@1x.png" alt="" data-aos="fade-left">
             </picture>
         </div>
     </section>
@@ -164,8 +164,8 @@
             <h2>Host Оn Тhe Cloud to Keep Growing</h2>
             <p>Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan.</p>
         </header>
-        <article class="grid grid--1x2 feature" data-aos="fade-right">
-            <div class="feature__content">
+        <article class="grid grid--1x2 feature">
+            <div class="feature__content" data-aos="fade-right">
                 <span class="icon-container">
                     <svg class="icon icon--praimary">
                         <use xlink:href="images/sprite.svg#easy"></use>
@@ -183,7 +183,7 @@
                 <a href="/" class="link-arrow">Learn More</a>
             </div>
 
-            <picture data-aos="zoom-in-left">
+            <picture  data-aos="flip-right">
                 <source type="image/webp" srcset="/images/easy.webp 1x, /images/easy@2x.webp 2x">
                 <source type="image/jpg" srcset="/images/easy.jpg 1x, /images/easy@2x.jpg 2x">
                 <img class="feature__image" src="/images/easy@2x.jpg" alt="">
@@ -193,7 +193,7 @@
         <article class="grid grid--1x2 feature">
 
 
-            <div class="feature__content" data-aos="fade-left">
+            <div class="feature__content" data-aos="fade-right">
                 <span class="icon-container">
                     <svg class="icon icon--praimary">
                         <use xlink:href="images/sprite.svg#computer"></use>
@@ -211,7 +211,7 @@
                 <a href="/" class="link-arrow">Learn More</a>
             </div>
 
-            <picture data-aos="zoom-in-right">
+            <picture data-aos="flip-left">
                 <source type="image/webp" srcset="/images/fast.webp 1x, /images/fast@2x.webp 2x">
                 <source type="image/jpg" srcset="/images/fast.jpg 1x, /images/fast@2x.jpg 2x">
                 <img class="feature__image" src="/images/fast@2x.jpg" alt="">
@@ -239,7 +239,7 @@
                 <a href="/" class="link-arrow">Learn More</a>
             </div>
 
-            <picture data-aos="zoom-in-left">
+            <picture data-aos="flip-right">
                 <source type="image/webp" srcset="/images/wordpress.webp 1x, /images/wordpress@2x.webp 2x">
                 <source type="image/jpg" srcset="/images/wordpress.jpg 1x, /images/wordpress@2x.jpg 2x">
                 <img class="feature__image" src="/images/wordpress@2x.jpg" alt="">
@@ -250,7 +250,7 @@
         <article class="grid grid--1x2 feature">
 
 
-            <div class="feature__content" data-aos="fade-left">
+            <div class="feature__content" data-aos="fade-right">
                 <span class="icon-container">
                     <svg class="icon icon--praimary">
                         <use xlink:href="images/sprite.svg#clock"></use>
@@ -268,7 +268,7 @@
                 <a href="/" class="link-arrow">Learn More</a>
             </div>
 
-            <picture data-aos="zoom-in-right">
+            <picture data-aos="flip-left">
                 <source type="image/webp" srcset="/images/support.webp 1x, /images/support@2x.webp 2x">
                 <source type="image/jpg" srcset="/images/support.jpg 1x, /images/support@2x.jpg 2x">
                 <img class="feature__image" src="/images/support@2x.jpg" alt="">
@@ -281,18 +281,18 @@
     <section class="block block--dark block--skewed-right showcase__block">
 
         <header class="block__header">
-            <h2 class="showcase_heading">User-Friendly Control Panel</h2>
+            <h2 class="showcase_heading" data-aos="fade-up">User-Friendly Control Panel</h2>
         </header>
 
         <article class="grid grid--1x2">
 
-            <picture data-aos="fade-right">
+            <picture data-aos="flip-right">
                 <source type="image/webp" srcset="/images/ipad.webp 1x, /images/ipad@2x.webp 2x">
                 <source type="image/png" srcset="/images/ipad.png 1x, /images/ipad@2x.png 2x">
                 <img class="showcase__image" src="/images/ipad.png" alt="">
             </picture>
 
-            <div class="showcase__content" data-aos="fade-left">
+            <div class="showcase__content" data-aos="fade-right">
                 <div class="media">
                     <div class="media__icon">
                         <svg class="icon icon--praimary">
