--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <picture>
                 <source type="image/webp" srcset="images/banner@1x.webp 1x, images/banner@2x.webp 2x ">
                 <source type="image/png" srcset="images/banner@1x.png 1x, images/banner@2x.png 2x ">
-                <img class="hero__image" src="/images/banner@1x.png" alt="" data-aos="fade-left">
+                <img class="hero__image" src="/images/banner@1x.png" alt="" data-aos="flip-up">
             </picture>
         </div>
     </section>
